--- a/package.json
+++ b/package.json
@@ -4,18 +4,36 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "cross-env NODE_ENV=test SECRET_KEY=chavesecreta jest --forceExit --runInBand"
+    "test": "cross-env NODE_ENV=test SECRET_KEY=chavesecreta jest --forceExit --runInBand",
+    "dev": "ts-node-dev --cls --rs --ignore-watch node_modules src/server.ts",
+    "typeorm": "typeorm-ts-node-commonjs"
   },
   "devDependencies": {
     "@jest/globals": "^29.4.3",
+    "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
-    "@types/node": "^16.11.10",
+    "@types/node": "^18.16.1",
+    "@types/pg": "^8.6.6",
     "@types/supertest": "^2.0.12",
+    "cross-env": "^7.0.3",
     "jest": "^29.4.3",
     "sqlite3": "^5.1.4",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
-    "cross-env": "^7.0.3",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
+  },
+  "repository": "git@github.com:Kenzie-Academy-Brasil-Developers/m4-movies-typeorm-gui2912.git",
+  "author": "Gui2912 <dainize22@gmail.com>",
+  "license": "MIT",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "pg": "^8.10.0",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.15",
+    "zod": "^3.21.4"
   }
 }
